# Depth-Aware-Object-Detection

./: .gitignore  README.md  pyproject.toml
da-od/: config.py
da-od/data/: prosessing.py
da_od/: Object_detectionYOLO.py  SAM.py  Segmentation.py  YoloNas.py  config.py  main.py
da_od/Segment_anything/: Segmentation.py  utils.py
da_od/data/: newprosses.py  prosessing.py
da_od/depth_anything/: dpt.py
da_od/depth_anything/util/: __init__.py
da_od/model/: SAM.py  Visualization.ipynb  __init__.py  all.ipynb  depth.ipynb  depth.py  depth_anything.py  ds_midas.py  ds_monodepth2.py  od_yolo.py  seg_sam.py  segmentation.py  test.py  transformer.py  yolo_nas.py
da_od/model/depth_anything/: __init__.py  blocks.py  dpt.py
da_od/model/depth_anything/util/: transform.py
da_od/model/monodepth/: __init__.py  monodepth.py
da_od/model/segment_anything/: __init__.py  automatic_mask_generator.py  build_sam.py  predictor.py
da_od/model/segment_anything/modeling/: image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
da_od/model/segment_anything/utils/: __init__.py  transforms.py
da_od/segment_anything/: automatic_mask_generator.py  build_sam.py  predictor.py
da_od/segment_anything/modeling/: __init__.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
notebook/: huggingface.ipynb
output-imgs/: DA_A02_raw_depth.npy  DA_img-v01_raw_depth.npy  Mi_A02_raw_depth.npy  Mi_img-00007_raw_depth.npy  Mo_A02_raw_depth.npy  Mo_img-00007_raw_depth.npy
output-imgs/sample_result/: sample.md
